bin/repositories-checker.py: various improvements and fixes
- Add `--github` option to output in github actions format,
  otherwise use colored term output.
- If "-" is passed as base xml, assume we are doing full xml check.
  In this mode I skip checking maintainer emails since it might use
  too much API calls.
- Fix typing
- Improve error message for bas repos sorting (explain what is bad)

Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/.github/workflows/repositories.yml
+++ b/.github/workflows/repositories.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Check repositories.xml
       run: |
         BASE_REF=$(git merge-base --fork-point origin/${{ github.base_ref }})
-        python bin/repositories-checker.py <(git show ${BASE_REF}:files/overlays/repositories.xml) files/overlays/repositories.xml
+        python bin/repositories-checker.py --github <(git show ${BASE_REF}:files/overlays/repositories.xml) files/overlays/repositories.xml
 
   validate-schema:
     runs-on: ubuntu-latest
