--- a/files/overlays/.gitignore
+++ b/files/overlays/.gitignore
@@ -1,5 +1,7 @@
-/.repositories-dtd-valid
-/.repositories-xsd-valid
 /.repositories-check-successful
+/.repositories-dtd-valid
+/.repositories-expected-format.xml
+/.repositories-style-ok
+/.repositories-xsd-valid
 /repositories.dtd
 /repositories.xsd
