overlays: add 'format' make target
Closes: https://github.com/gentoo/api-gentoo-org/pull/588
Signed-off-by: Florian Schmaus <flow@gentoo.org>

--- a/files/overlays/Makefile
+++ b/files/overlays/Makefile
@@ -32,6 +32,10 @@ endif
 	../../bin/repositories-checker.py - $^
 	touch $@
 
+.PHONY: format
+format: .repositories-expected-format.xml
+	cmp -s repositories.xml $^ || cp $^ repositories.xml
+
 .repositories-expected-format.xml: repositories.xml
 	xmlstarlet fo $^ > $@
 
