Use xmllint instead of xmlstarlet
Signed-off-by: Florian Schmaus <flow@gentoo.org>
Suggested-by: Robin H. Johnson <robbat2@gentoo.org>

--- a/files/mirrors/Makefile
+++ b/files/mirrors/Makefile
@@ -1,5 +1,5 @@
 .%.expected-format.xml: %.xml
-	xmlstarlet fo --encode utf-8 $^ > $@
+	xmllint --format $^ > $@
 
 .ONESHELL:
 .%.expected-format.xml.ok: SHELL = /bin/bash
